# doctk

./: .doc-quality-files.txt  .gitattributes  .gitignore  .lychee.toml  .test-precommit-verification.txt  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  agent-implement-next-prompt.md  claude-code-implement-next-prompt.md  claude-code-implement-specs-prompt.txt  claude-code-kiro-spec-prompt.md  how --name-only a170c36  main.py  mkdocs.yml  pyproject.toml  tox.ini
.github/: FUNDING.yml
.github/workflows/: docs.yml  tests.yml
.kiro/specs/: CHANGES_SUMMARY.md  DESIGN_TO_SPEC_MAPPING.md  GRAPH_FEATURES_ROADMAP.md  IMPLEMENTATION_ORDER.md  PARALLEL_WORK_GUIDE.md  SPEC_REVIEW_PROMPT.md  kiro-spec-review-prompt-v2.md  kiro-spec-review-prompt-v3.md
.kiro/specs/COMBINED_document-outliner-with-lsp/: design.md
.kiro/specs/advanced-graph-features/: requirements.md
.kiro/specs/core-api-stabilization/: AI_REVIEW_PROMPT.txt  AI_TASKS_REVIEW_PROMPT.txt  CODEX_FINAL_REVIEW_RESPONSE.md  CODEX_REVIEW_RESPONSE.md  DESIGN_SYNC_COMPLETE.md  FEEDBACK_APPLIED.md  FINAL_APPROVAL_READY.md  FINAL_FIXES_APPLIED.md  FINAL_MINOR_FIXES.md  FINAL_NITS_FIXED.md  FINAL_REVIEW_RESPONSES.md  NEXT-ACTIONS.md  REVIEW_PROMPT.md  SPEC_COMPLETE.md  TASKS_FINAL_FIXES.md  TASKS_REVIEW_PROMPT.md  TASKS_REVIEW_READY.md  TASKS_UPDATED.md  TRULY_FINAL_COMPLETE.md  design.md  requirements.md  tasks.md
.kiro/specs/doctk-core-integration/: README.md  design.md  requirements.md  tasks.md
.kiro/specs/doctk-language-server/: README.md  design.md  requirements.md  tasks.md
.kiro/specs/document-outliner-with-lsp/: design.md  requirements.md  tasks.md
.kiro/specs/fragment-graph-model/: requirements.md
.kiro/specs/integrate-python-project-template/: design.md  requirements.md  tasks.md
.kiro/specs/release-preparation/: tasks.md
.kiro/specs/vscode-outliner-extension/: README.md  design.md  requirements.md  tasks.md
.kiro/steering/: README.md  ai-agent-quick-reference.md  product.md  python-wsl-uv.md  spec-maintenance.md  structure.md  tech.md  validate-spec-accuracy.md  workflow.md
docs/: POC-SUMMARY.md  REPRODUCTION-GUIDE.md  SESSION-SUMMARY.md  SPECIFICATION.md  index.md
docs/api/: core-integration.md  dsl.md  lsp.md
docs/archive/: README.md  SESSION-SUMMARY.md  reproduction-guide.md
docs/design/: 01-initial-design.md  02-pluggable-architecture.md  03-core-integration-decisions.md  04-lsp-architecture.md  05-split-transclusion-plan.md  06-core-api-dsl-review.md
docs/development/: quality.md  setup.md  testing.md  tooling.md
docs/getting-started/: installation.md  quick-start.md
docs/guides/: adding-new-interface.md  extending-dsl.md
examples/: sample.md
extensions/doctk-outliner/: .eslintrc.json  .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
extensions/doctk-outliner/src/: documentSyncManager.ts  extension.ts  languageClient.ts  logger.ts  outlineProvider.ts  pythonBridge.ts  types.ts
fixtures/md/: realistic_B.md
scripts/: README.md  check-environment.sh  check-tools.py  clean-environment.sh  clean-tools.py  setup-environment.sh  setup-external-tools.py  sync-precommit-versions.py  tool_manager.py  validate-plugins.py
src/doctk/: __init__.py  cli.py  core.py  identity.py  internal_ops.py  operations.py  outliner.py
src/doctk/dsl/: __init__.py  codeblock.py  executor.py  lexer.py  parser.py  repl.py
src/doctk/integration/: __init__.py  bridge.py  compat.py  errors.py  memory.py  operations.py  performance.py
src/doctk/lsp/: __init__.py  ai_support.py  bridge.py  compat.py  completion.py  config.py  hover.py  memory.py  operations.py  performance.py  protocols.py  registry.py  server.py
src/doctk/parsers/: __init__.py  markdown.py
tests/: __init__.py  test_basic.py
tests/docs/: __init__.py  test_documentation_quality.py  test_spec_quality.py
tests/e2e/: __init__.py  test_cli_execute.py  test_lsp_e2e.py  test_performance_e2e.py  test_pluggable_architecture.py  test_script_execution.py
tests/quality/: __init__.py
tests/unit/: __init__.py  test_ai_support.py  test_bridge.py  test_canonicalization.py  test_compat.py  test_completion_provider.py  test_core_api_integration.py  test_document_indexing.py  test_dsl_parser.py  test_error_handler.py  test_error_recovery.py  test_extension_bridge_integration.py  test_hover_provider.py  test_identity_edge_cases.py  test_interface.py  test_internal_ops.py  test_json_serialization.py  test_language_server.py  test_lsp_ai_features.py  test_lsp_client_integration.py  test_lsp_config.py  test_lsp_operations.py  test_lsp_positions.py  test_memory.py  test_node_fields.py  test_operation_registry.py  test_outline_integration.py  test_parser_positions.py  test_performance.py  test_performance_benchmarks.py  test_provenance.py  test_source_spans.py  test_stable_ids.py  test_structure_operations.py  test_text_edit_semantics.py  test_view_mapping.py
(+44 files in other folders)
